Add cloudscraper to dependencies installation

--- a/.github/workflows/sync-members.yml
+++ b/.github/workflows/sync-members.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.x'
       
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests cloudscraper
       
       - name: Fetch guild members from API
         run: python collect_region.py
